--- a/apt-update.yaml
+++ b/apt-update.yaml
@@ -1,14 +1,9 @@
 ---
-- name: "apt update"
+- name: "Update Packages"
   hosts: all
   become: yes
   become_method: sudo
   tasks:
-#  - name: "Update Repository cache"
-#    apt:
-#      update_cache: true
-#      cache_valid_time: 3600
-#      force_apt_get: true
   - name: "Update cache & Full system update"
     apt:
       update_cache: true
